fix issue with feature tabs not centered properly on right of screen

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,12 +12,12 @@ body{
 
 
 .container {
-  width: 100vw;
+  width: 100%;
 }
 
 header {
   display: flex;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
   padding: 0 1em;
   background: #328aab;
